--- a/SpeechToText/SpeechToText/SummaryPanel.resx
+++ b/SpeechToText/SpeechToText/SummaryPanel.resx
@@ -503,6 +503,17 @@
   <metadata name="toolTip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>157, 17</value>
   </metadata>
+  <data name="button_saveToFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAElSURBVEhL7ZWxagJBFEUvSEIEE8mf5CfyNyEWKQzYiFVCPsM0BlNYaWcjImRGQfA3bFIYMRDv
+        23kr67Iso7usFjlwGd7w5h1l1xEFYl+ZFfOXMR3AXOjQOHYNjK61IHLgEGwTmLa4frokiuJDfSR26frM
+        I1dKJB8lrm2mDwyvtDHkKAl7wuFhhED0zgyAcdntBeQpERaXrHtMVzeEvCVCIIrOOVYyHbnhSRIhu+SB
+        kjowu3OCwyXffGte/CPfyDzp4Qipkq979yl9Y2rA/FYPR0iV5MXpJbbB8LnIvnfkOT7rAEX2d+wVxP7w
+        Pa9o4Yn0yyUbJV0Sq31JnfMviXM+kvD+ySpJnFOMhP/xkxstSFaJYKqs+XvbYd+YX9eUWzbuhi4EYAtq
+        WUDeNEApGQAAAABJRU5ErkJggg==
+</value>
+  </data>
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>254, 17</value>
   </metadata>
