--- a/SpeechToText/SpeechToText/RecordingPanel.resx
+++ b/SpeechToText/SpeechToText/RecordingPanel.resx
@@ -120,21 +120,21 @@
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
   <data name="button_startStopToggle.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAMNSURBVFhH7ZhLbE1RFIb/NkgkVSORIOKVeA2Ix8SjHo2BSCQ6M/COmglDIqx7b0l1gGKgI8aI
-        iCgTjJSgElNDj4HQqkcNNPX4177rJPeeu9P2PJH4ky/3rHX2/ve65+y97zkXiSVYT7rIS9Jn6PElFLHO
-        Wv0BCRaQR+TXKDxECfOtV04SNJFPFUWMxgBZY70zlmAe6beBo9DHKznXXDKU4EFo4CjcNZeMJFgWGjAO
-        S80tAwnaQoPFoWhuGUhwKzRYHG6aWwYSXCG9Hj6QcCGa87W9bG45SjCDVBfYhul2NkcJ2slVD74NW3O+
-        tu3mloHKtyhcSFR6zS1HFbHSU8gKO5uhBDMdgQQtpNVDJwkXqDlf2xZzq/WPLMF1R6C0b3HYP7J0z6rc
-        t3RlCubUUMAufoYL2Ulq21au7rB/ZIUNSljI+ba8BsFuUl2gFu1rqx6BUi8w/VucuECdI90WafyM+AaN
-        wlNzU7875JpFMSS4SJ5bpHE38Q0ahdvmpn4vyHmLYkhwjLyzSGPfdhKVs+ZWx+N+ztUjFseQYKMzLWKJ
-        iwtotkHiU8AG5xVs7olerLowniYfaXrCMvqtk8zDHueh0ufC8hvgOBfHVnkevieNLi5iLY+HiK+AkRhi
-        39XOox2TGWtxnS5OJME08o2csoze6n2Mh4mvEB/D7LPHeqtnB/mKk5hqmYQSHLdBtlhGi9zE3FviK6iS
-        N2zbbL3Uayv5QY5aJgUJ6oluqp9Jk2WBM5jIwQ8z59vAda4ecm0C6YIQfCE3SL1lU5Kggdwn31nUfmbK
-        kz3QaUziuVkOPa5WHfsccH0F90iD5VOWrjjdWMtXqMctmJGlq17/hXhMfpJzJOGqHYv0bwzBE6KFviJa
-        9EEWvNehx4ILdk7baIGrrHdu0qujheqKfE2CuRegxXXY1lI9HXJX+Uk5XGCrnf0L9L/ApPoHCmwk4feP
-        8m93rhJM4KpcTGrfNcaCYBHJaB8sYAfNB0n4VkZlgF7bzDUllTCbxvoz5RswDoN8Nppi7imogO2eQZJR
-        wGZzH0HAb5Z5MX5FuN+LAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAACgAAAAoCAYAAACM/rhtAAAABGdBTUEAALGPC/xhBQAAAw1JREFUWEft
+        mEtsTVEUhv82SCRVI5Eg4pV4DYjHxKMejYFIJDoz8I6aCUMirHtvSXWAYqAjxoiIKBOMlKASU0OPgdCq
+        Rw009fjXvusk95670/Y8kfiTL/esdfb+97rn7L3vOReJJVhPushL0mfo8SUUsc5a/QEJFpBH5NcoPEQJ
+        861XThI0kU8VRYzGAFljvTOWYB7pt4Gj0McrOddcMpTgQWjgKNw1l4wkWBYaMA5LzS0DCdpCg8WhaG4Z
+        SHArNFgcbppbBhJcIb0ePpBwIZrztb1sbjlKMINUF9iG6XY2RwnayVUPvg1bc7627eaWgcq3KFxIVHrN
+        LUcVsdJTyAo7m6EEMx2BBC2k1UMnCReoOV/bFnOr9Y8swXVHoLRvcdg/snTPqty3dGUK5tRQwC5+hgvZ
+        SWrbVq7usH9khQ1KWMj5trwGwW5SXaAW7WurHoFSLzD9W5y4QJ0j3RZp/Iz4Bo3CU3NTvzvkmkUxJLhI
+        nlukcTfxDRqF2+amfi/IeYtiSHCMvLNIY992EpWz5lbH437O1SMWx5BgozMtYomLC2i2QeJTwAbnFWzu
+        iV6sujCeJh9pesIy+q2TzMMe56HS58LyG+A4F8dWeR6+J40uLmItj4eIr4CRGGLf1c6jHZMZa3GdLk4k
+        wTTyjZyyjN7qfYyHia8QH8Pss8d6q2cH+YqTmGqZhBIct0G2WEaL3MTcW+IrqJI3bNtsvdRrK/lBjlom
+        BQnqiW6qn0mTZYEzmMjBDzPn28B1rh5ybQLpghB8ITdIvWVTkqCB3CffWdR+ZsqTPdBpTOK5WQ49rlYd
+        +xxwfQX3SIPlU5auON1Yy1eoxy2YkaWrXv+FeEx+knMk4aodi/RvDMETooW+Ilr0QRa816HHggt2Ttto
+        gausd27Sq6OF6op8TYK5F6DFddjWUj0dclf5STlcYKud/Qv0v8Ck+gcKbCTh94/yb3euEkzgqlxMat81
+        xoJgEcloHyxgB80HSfhWRmWAXtvMNSWVMJvG+jPlGzAOg3w2mmLuKaiA7Z5BklHAZnMfQcBvlnkxfkW4
+        34sAAAAASUVORK5CYII=
 </value>
   </data>
 </root>
