--- a/SpeechToText/SpeechToText/SummaryPanel.resx
+++ b/SpeechToText/SpeechToText/SummaryPanel.resx
@@ -505,13 +505,13 @@
   </metadata>
   <data name="button_saveToFile.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAElSURBVEhL7ZWxagJBFEUvSEIEE8mf5CfyNyEWKQzYiFVCPsM0BlNYaWcjImRGQfA3bFIYMRDv
-        23kr67Iso7usFjlwGd7w5h1l1xEFYl+ZFfOXMR3AXOjQOHYNjK61IHLgEGwTmLa4frokiuJDfSR26frM
-        I1dKJB8lrm2mDwyvtDHkKAl7wuFhhED0zgyAcdntBeQpERaXrHtMVzeEvCVCIIrOOVYyHbnhSRIhu+SB
-        kjowu3OCwyXffGte/CPfyDzp4Qipkq979yl9Y2rA/FYPR0iV5MXpJbbB8LnIvnfkOT7rAEX2d+wVxP7w
-        Pa9o4Yn0yyUbJV0Sq31JnfMviXM+kvD+ySpJnFOMhP/xkxstSFaJYKqs+XvbYd+YX9eUWzbuhi4EYAtq
-        WUDeNEApGQAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAABkAAAAZCAYAAADE6YVjAAAABGdBTUEAALGPC/xhBQAAASVJREFUSEvt
+        lbFqAkEURS9IQgQTyZ/kJ/I3IRYpDNiIVUI+wzQGU1hpZyMiZEZB8DdsUhgxEO/beSvrsiyju6wWOXAZ
+        3vDmHWXXEQViX5kV85cxHcBc6NA4dg2MrrUgcuAQbBOYtrh+uiSK4kN9JHbp+swjV0okHyWubaYPDK+0
+        MeQoCXvC4WGEQPTODIBx2e0F5CkRFpese0xXN4S8JUIgis45VjIdueFJEiG75IGSOjC7c4LDJd98a178
+        I9/IPOnhCKmSr3v3KX1jasD8Vg9HSJXkxekltsHwuci+d+Q5PusARfZ37BXE/vA9r2jhifTLJRslXRKr
+        fUmd8y+Jcz6S8P7JKkmcU4yE//GTGy1IVolgqqz5e9th35hf15RbNu6GLgRgC2pZQN40QCkZAAAAAElF
+        TkSuQmCC
 </value>
   </data>
   <metadata name="saveFileDialog1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
